@@ -18,7 +18,7 @@
  <Q>question</Q>
  <A>answer</A>
 </item>
-<item id="9cff728">
+<item>
  <cat>&lt;default&gt;</cat>
  <Q>question2</Q>
  <A>answer2</A>
